client/src/components/Navbar/Navbar.scss
@import "../../styles/variables.scss";

.navbar {
  width: 100%;
  background-color: lighten($navbar-background, 15%);
  height: 5rem;
  display: flex;
  justify-content: flex-end;

  &__button {
    display: flex;
    align-items: center;
    margin-right: 1rem;
  }

  &__button &__icon {
    width: 2rem;
    height: 2rem;
  }

  &__notice {
    position: relative;
    margin-right: 0.5rem;;
    p {
      margin: 0;
      position: absolute;
      right: 0;
      top: 0;
      border: solid red 1px;
      border-radius: 40%;
      background-color: red;
      font-size: small;
      color: $white;
      width: 40px;
      height: 20px;
    }
    button {
      padding: 0 1.8rem 0 0;
      color: black;
      margin: 0;
      border: none;
      background-color: lighten($navbar-background, 15%);
    }
  }

  &__coin {
    display: flex;
    align-items: center;
    img {
      display: block;
      margin-right: 0.5rem;
    }
    p {
      font-weight:bolder;
    }
  }

  &__user {
    display: flex;
    align-items: center;

    &__name {
      margin: 0 1rem 0 0.5rem;
    }
  }
    
  &__user &__avatar {
    width: 2rem;
    height: 2rem;
  }

}

